common btn and navbar added with suitable styles.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <header></header>
+        <header>
+            <nav id="navbar">
+                <span>Ma<span style="color: #FD6E0A;">r</span>y</span>
+                <div id="nav-options">
+                    <a href="#">Portfolio</a>
+                    <a href="#">Blog</a>
+                    <button class="common-btn">Hire Me</button>
+                </div>
+            </nav>
+        </header>
         <main></main>
         <footer></footer>
     </body>
