--- a/index.html
+++ b/index.html
@@ -5,17 +5,43 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Developer Portfolio</title>
         <link rel="stylesheet" href="style.css" />
+        <script
+            src="https://kit.fontawesome.com/f356f0e3d9.js"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <header>
             <nav id="navbar">
-                <span>Ma<span style="color: #FD6E0A;">r</span>y</span>
+                <span>Ma<span style="color: #fd6e0a">r</span>y</span>
                 <div id="nav-options">
                     <a href="#">Portfolio</a>
                     <a href="#">Blog</a>
                     <button class="common-btn">Hire Me</button>
                 </div>
             </nav>
+            <div id="banner">
+                <div id="left-content">
+                    <h3>Hi, I am</h3>
+                    <h1>Mary Hardy</h1>
+                    <p>
+                        Shot what able cold new see hold.Friendly as an betrayed
+                        formerly he. Morning because as to society behaved
+                        moments.
+                    </p>
+                    <div id="btn-container">
+                        <button class="common-btn">
+                            <i class="fa-solid fa-download"></i>
+                            <span>Download CV</span>
+                        </button>
+                        <button class="secondary-btn">
+                            <i class="fa-solid fa-phone"></i>
+                            <span>Contact</span>
+                        </button>
+                    </div>
+                </div>
+                <img src="images/hardy.png" alt="Hardy Image" />
+            </div>
         </header>
         <main></main>
         <footer></footer>
