About me section added with style.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,35 @@
                 <img src="images/hardy.png" alt="Hardy Image" />
             </div>
         </header>
-        <main></main>
+        <main>
+            <section id="about-me">
+                <div>
+                    <h2>About Me</h2>
+                    <p class="common-paragraph">
+                        I, m a designer & developer with a passion for web
+                        design. I enjoy developing simple, clean and slick
+                        websites that provide real value to the end user.
+                        Thousands of clients have procured exceptional resulfs
+                        while working with me. Delivering work within time and
+                        budget which meets clients requirements in our mata.
+                    </p>
+                    <table>
+                        <thead>
+                            <th>Name:</th>
+                            <th>Email:</th>
+                            <th>Date of Birth:</th>
+                            <th>From:</th>
+                        </thead>
+                        <tbody>
+                            <td>Mary Hardy</td>
+                            <td>maryhardy@gmail.com</td>
+                            <td>21 March, 2000</td>
+                            <td>Texas, USA</td>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </main>
         <footer></footer>
     </body>
 </html>
