--- a/index.html
+++ b/index.html
@@ -71,6 +71,66 @@
                     </table>
                 </div>
             </section>
+            <section id="whatido">
+                <h2>What I Do</h2>
+                <p class="common-paragraph">
+                    I have more than 10 years experience building software for
+                    clients all over the world. Below is a quick overview of my
+                    main technical skill sets and technologies i use. Want to
+                    find out more about my experience? Check out my online
+                    resume and project portfolio.
+                </p>
+                <div id="projects-container">
+                    <div id="project">
+                        <img
+                            src="images/icons/js.png"
+                            alt="Vanila Javascript"
+                        />
+                        <h4>Vanilla Javascript</h4>
+                        <p class="common-paragraph">
+                            List skill/technologies here. You can change the
+                            icon above to any of the 1500+ FontAwesome 5 free
+                            icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div id="project">
+                        <img
+                            src="images/icons/react.png"
+                            alt="React"
+                        />
+                        <h4>React</h4>
+                        <p class="common-paragraph">
+                            List skill/technologies here. You can change the
+                            icon above to any of the 1500+ FontAwesome 5 free
+                            icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div id="project">
+                        <img
+                            src="images/icons/nodejs.png"
+                            alt="Node js"
+                        />
+                        <h4>Node JS</h4>
+                        <p class="common-paragraph">
+                            List skill/technologies here. You can change the
+                            icon above to any of the 1500+ FontAwesome 5 free
+                            icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div id="project">
+                        <img
+                            src="images/icons/mongo.png"
+                            alt="Mongo DB"
+                        />
+                        <h4>Mongo DB</h4>
+                        <p class="common-paragraph">
+                            List skill/technologies here. You can change the
+                            icon above to any of the 1500+ FontAwesome 5 free
+                            icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </body>
