--- a/index.html
+++ b/index.html
@@ -94,10 +94,7 @@
                         </p>
                     </div>
                     <div id="project">
-                        <img
-                            src="images/icons/react.png"
-                            alt="React"
-                        />
+                        <img src="images/icons/react.png" alt="React" />
                         <h4>React</h4>
                         <p class="common-paragraph">
                             List skill/technologies here. You can change the
@@ -106,10 +103,7 @@
                         </p>
                     </div>
                     <div id="project">
-                        <img
-                            src="images/icons/nodejs.png"
-                            alt="Node js"
-                        />
+                        <img src="images/icons/nodejs.png" alt="Node js" />
                         <h4>Node JS</h4>
                         <p class="common-paragraph">
                             List skill/technologies here. You can change the
@@ -118,10 +112,7 @@
                         </p>
                     </div>
                     <div id="project">
-                        <img
-                            src="images/icons/mongo.png"
-                            alt="Mongo DB"
-                        />
+                        <img src="images/icons/mongo.png" alt="Mongo DB" />
                         <h4>Mongo DB</h4>
                         <p class="common-paragraph">
                             List skill/technologies here. You can change the
@@ -129,6 +120,95 @@
                             icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
+                </div>
+            </section>
+            <section id="resume-summary">
+                <h2>A summary of My Resume</h2>
+                <div id="resume-container">
+                    <div id="education">
+                        <h2>My Education</h2>
+                        <div>
+                            <h3>Master in Computer Engineering</h3>
+                            <h5>Harvard University / 2015-2017</h5>
+                            <p>
+                                I have more than 10 years experience building
+                                software for clients all over the world. Below
+                                is a quick overview of my main technical skill
+                                sets and technologies i use. Want to find out
+                                more about my experience? Check out my online
+                                resume and project portfolio.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Master in Computer Engineering</h3>
+                            <h5>Harvard University / 2015-2017</h5>
+                            <p>
+                                I have more than 10 years experience building
+                                software for clients all over the world. Below
+                                is a quick overview of my main technical skill
+                                sets and technologies i use. Want to find out
+                                more about my experience? Check out my online
+                                resume and project portfolio.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Master in Computer Engineering</h3>
+                            <h5>Harvard University / 2015-2017</h5>
+                            <p>
+                                I have more than 10 years experience building
+                                software for clients all over the world. Below
+                                is a quick overview of my main technical skill
+                                sets and technologies i use. Want to find out
+                                more about my experience? Check out my online
+                                resume and project portfolio.
+                            </p>
+                        </div>
+                    </div>
+                    <div id="experience">
+                        <h2>My Experience</h2>
+                        <div>
+                            <h3>Sr. Front End Developer</h3>
+                            <h5>Apple Inc / 2020 - Current</h5>
+                            <p>
+                                I have more than 10 years experience building
+                                software for clients all over the world. Below
+                                is a quick overview of my main technical skill
+                                sets and technologies i use. Want to find out
+                                more about my experience? Check out my online
+                                resume and project portfolio.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Jr. Front End Developer</h3>
+                            <h5>Dribble Inc / 2028 - 2022</h5>
+                            <p>
+                                I have more than 10 years experience building
+                                software for clients all over the world. Below
+                                is a quick overview of my main technical skill
+                                sets and technologies i use. Want to find out
+                                more about my experience? Check out my online
+                                resume and project portfolio.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>HTML Developer</h3>
+                            <h5>Adobe Inc / 2017 - 2018</h5>
+                            <p>
+                                I have more than 10 years experience building
+                                software for clients all over the world. Below
+                                is a quick overview of my main technical skill
+                                sets and technologies i use. Want to find out
+                                more about my experience? Check out my online
+                                resume and project portfolio.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="btn-container">
+                    <button class="common-btn">
+                        <i class="fa-solid fa-download"></i>
+                        <span>Download CV</span>
+                    </button>
                 </div>
             </section>
         </main>
