footer section added with form and proper styles and by that this project has ended.

--- a/index.html
+++ b/index.html
@@ -212,6 +212,31 @@
                 </div>
             </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div id="contact-form">
+                <div id="social">
+                    <h2>Let's Connect</h2>
+                    <p class="common-paragraph">
+                        Please fill out the form on this section to contact with
+                        me or call between 9:00 A.M and 8:00 P.M ET, Monday
+                        through Firday
+                    </p>
+                    <div class="social-links">
+                        <a href="#"><img src="images/icons/facebook.png" alt="Facebook Images"></a>
+                        <a href="#"><img src="images/icons/twitter.png" alt="Twitter Images"></a>
+                        <a href="#"><img src="images/icons/insta.png" alt="Instagram Images"></a>
+                    </div>
+                </div>
+                <div id="form">
+                    <h2>Let's Message me</h2>
+                    <form action="">
+                        <input type="text" placeholder="Your name">
+                        <input type="email" name="" id="" placeholder="Your email">
+                        <textarea name="" id="" placeholder="Message"></textarea>
+                    </form>
+                    <button class="common-btn">Submit</button>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
